fix: 侧边栏模型选择改回select下拉框修复无法选择问题

--- a/webview.html
+++ b/webview.html
@@ -444,16 +444,15 @@
         </select>
         <input type="password" id="aiApiKey" placeholder="API Key" style="padding:8px;border-radius:6px;border:1px solid var(--stroke);background:var(--bg1);color:var(--fg0);font-size:12px;">
         <input type="text" id="aiApiUrl" placeholder="API URL" style="padding:8px;border-radius:6px;border:1px solid var(--stroke);background:var(--bg1);color:var(--fg0);font-size:12px;">
-        <input type="text" id="aiModel" list="aiModelList" placeholder="输入或选择模型" style="padding:8px;border-radius:6px;border:1px solid var(--stroke);background:var(--bg1);color:var(--fg0);font-size:12px;">
-        <datalist id="aiModelList">
-          <option value="GLM-4.7">最强编程</option>
+        <select id="aiModel" style="padding:8px;border-radius:6px;border:1px solid var(--stroke);background:var(--bg1);color:var(--fg0);font-size:12px;">
+          <option value="GLM-4.7">GLM-4.7 (最强编程)</option>
           <option value="GLM-4.6">GLM-4.6</option>
-          <option value="GLM-4.5">旗舰</option>
-          <option value="GLM-4.5-Air">高性价比</option>
-          <option value="GLM-4.5-AirX">极速</option>
-          <option value="GLM-4.5-Flash">免费</option>
-          <option value="GLM-4.5-X">极速响应</option>
-        </datalist>
+          <option value="GLM-4.5">GLM-4.5 (旗舰)</option>
+          <option value="GLM-4.5-Air">GLM-4.5-Air (高性价比)</option>
+          <option value="GLM-4.5-AirX">GLM-4.5-AirX (极速)</option>
+          <option value="GLM-4.5-X">GLM-4.5-X (极速响应)</option>
+          <option value="GLM-4.5-Flash">GLM-4.5-Flash (免费)</option>
+        </select>
         <div style="display:flex;align-items:center;justify-content:space-between;margin-top:4px;">
           <span style="font-size:12px;color:var(--fg2);">🧠 思考模式</span>
           <label class="switch">
